[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/Fonts/MontserratBold-DOWZd.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://src/UI/Components/StatsGrid.gd" type="Script" id=2]
[ext_resource path="res://src/UI/Game/GameOverDialog.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
size = 24
font_data = ExtResource( 1 )

[node name="GameOverDialog" type="WindowDialog"]
visible = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -456.0
margin_top = -244.0
margin_right = 456.0
margin_bottom = 244.0
input_pass_on_modal_close_click = false
popup_exclusive = true
window_title = "Game Over!"
script = ExtResource( 3 )

[node name="VBox" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 16.0
margin_top = 14.0
margin_right = -16.0
margin_bottom = -14.0

[node name="ScoreLabel" type="Label" parent="VBox"]
margin_left = 383.0
margin_right = 496.0
margin_bottom = 31.0
size_flags_horizontal = 6
size_flags_vertical = 1
custom_fonts/font = SubResource( 1 )
text = "Score: 99"

[node name="ScrollContainer" type="ScrollContainer" parent="VBox"]
margin_top = 35.0
margin_right = 880.0
margin_bottom = 380.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBox" type="VBoxContainer" parent="VBox/ScrollContainer"]
margin_right = 880.0
margin_bottom = 345.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="StatsGrid" type="GridContainer" parent="VBox/ScrollContainer/VBox"]
margin_right = 880.0
margin_bottom = 345.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/vseparation = 7
custom_constants/hseparation = 60
columns = 2
script = ExtResource( 2 )

[node name="HBox" type="HBoxContainer" parent="VBox"]
margin_top = 384.0
margin_right = 880.0
margin_bottom = 460.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.22
custom_constants/separation = 45
alignment = 1

[node name="PlayAgain" type="Button" parent="VBox/HBox"]
margin_left = 313.0
margin_right = 416.0
margin_bottom = 76.0
text = "Play Again"

[node name="MainMenu" type="Button" parent="VBox/HBox"]
margin_left = 461.0
margin_right = 566.0
margin_bottom = 76.0
text = "Main Menu"

[connection signal="pressed" from="VBox/HBox/PlayAgain" to="." method="_on_PlayAgain_pressed"]
[connection signal="pressed" from="VBox/HBox/MainMenu" to="." method="_on_MainMenu_pressed"]
